--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
   },
   "homepage": "https://github.com/peterhaldbaek/delimiter-stream",
   "devDependencies": {
-    "chai": "^2.3.0",
-    "lodash": "^3.9.1",
-    "mocha": "^2.2.5"
+    "chai": "2.3.0",
+    "lodash": "3.9.1",
+    "mocha": "2.2.5"
   }
 }
