--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
 language: node_js
 node_js:
-   - "stable"
-   - "4.1"
-   - "4.0"
+   - "node"
+   - "iojs"
+   - "6"
+   - "5"
+   - "4"
    - "0.12"
    - "0.11"
    - "0.10"
-   - "iojs"
 before_install: npm install -g mocha
