--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "delimiter-stream",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Streaming chunks based on delimiter",
   "main": "delimiter-stream.js",
   "scripts": {
@@ -18,6 +18,9 @@
     "linestream",
     "delimiterstream"
   ],
+  "engines": {
+    "node": ">=6.0.0"
+  },
   "author": "Peter Haldbæk <peter.haldbaek@gmail.com>",
   "license": "MIT",
   "bugs": {
