--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "delimiter-stream",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "Streaming chunks based on delimiter",
   "main": "delimiter-stream.js",
   "scripts": {
-    "test": "./node_modules/mocha/bin/mocha"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,9 @@
     "linestream",
     "delimiterstream"
   ],
+  "engines": {
+    "node": ">=6.0.0"
+  },
   "author": "Peter Haldbæk <peter.haldbaek@gmail.com>",
   "license": "MIT",
   "bugs": {
@@ -26,7 +29,6 @@
   "homepage": "https://github.com/peterhaldbaek/delimiter-stream",
   "devDependencies": {
     "chai": "2.3.0",
-    "lodash": "3.9.1",
     "mocha": "2.2.5"
   }
 }
