--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,12 @@
 language: node_js
 node_js:
    - "node"
+   - "lts/*"
+   - "14"
+   - "13"
+   - "12"
+   - "11"
+   - "10"
    - "9"
    - "8"
    - "6"
