--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/peterhaldbaek/delimiter-stream.git"
+    "url": "git+https://github.com/peterhaldbaek/delimiter-stream.git"
   },
   "keywords": [
     "stream",
